@@ -7,6 +7,10 @@ Files: *
 Copyright: 1994-2010, W3C(R) (MIT, ERCIM, KEIO)
 License: W3C-Software
 
+Files: *.py
+Copyright: 2008, W3C
+License: W3C-Software
+
 Files: htdocs/dev/tests/long-lines.html
 Copyright: 2000-2001, Christian Wolfgang Hujer
 License: W3C-Software
@@ -52,8 +56,10 @@ License: Debian Open Use Logo License
 
 Files: debian/*
 Copyright:
- 2010-2012, Nicholas Bamber <nicholas@periapt.co.uk>
+ 2010-2013, Nicholas Bamber <nicholas@periapt.co.uk>
+ 2003, Jaldhar H. Vyas <jaldhar@debian.org>
  2002-2010, Frederic Schutz <schutz@mathgen.ch>
+ 2008, Christian Perrier <bubulle@debian.org>
 License: Artistic
 
 License: W3C-Software
