@@ -7,6 +7,7 @@ w3c-markup-validator (1.3+dfsg-1) UNRELEASED; urgency=low
     but add mod_perl.patch to debianize paths (Closes: #618416)
   * Upstream Makefile now generates some resources but had to be debianized
   * Raised standards version to 3.9.4
+  * Added config file for license-reconcile and updated debian/copyright
 
  -- Nicholas Bamber <nicholas@periapt.co.uk>  Thu, 04 Oct 2012 12:16:23 +0100
 
